tests/golden/phase4a/compile-fail/iterator_collect_mismatch.rua
fn main() {
    let values = vec![1, 2, 3]
        .iter()
        .collect::<Vec<String>>();
}
